#
# Copyright (c) 2016 Hirochika Asai
# All rights reserved.
#
# Authors:
#      Hirochika Asai  <asai@jar.jp>
#

bin_PROGRAMS = hopscotch_test_basic

hopscotch_test_basic_SOURCES = tests/hopscotch_test_basic.c hopscotch.c

CLEANFILES = *~

test: all
	@echo "Testing all..."
	$(top_builddir)/hopscotch_test_basic
